<resources>
    <string name="app_name">Picttour</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="label_sign_up">Sing Up</string>
    <string name="label_sign_in">Sing In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="btn_login">Login</string>
    <string name="btn_Save">Save</string>
    <string name="btn_sign_up">Sign up</string>
</resources>